--- a/qnd/gui/pages/schedules.html
+++ b/qnd/gui/pages/schedules.html
@@ -1171,6 +1171,8 @@
 			$("#saveit").click(function(){
 				saveitbasic();
 			});
+			$("#tab_1").show();
+			$("#tab_2").hide();
 		});
 		
 		$("#tab_22").click(function(){
@@ -1178,6 +1180,8 @@
 			$("#saveit").click(function(){
 				saveitadvanced();
 			});
+			$("#tab_2").show();
+			$("#tab_1").hide();
 		});
 	});
 </script>
